Added classes of service functionality
Added the ability to pick a class of service field and assign a color to
each class of service.

--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
     	"Kanban.js",
     	"KanbanCardRenderer.js",
     	"KanbanColumnRenderer.js",
-    	"KanbanConfig.js",
+    	"KanbanColumnConfig.js",
+    	"KanbanCOSConfig.js",
     	"KanbanPolicy.js",
     	"KanbanReport.js"
     ],
